kubernetes/apps/downloads/recyclarr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recyclarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: recyclarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
  egress:
    - toEntities:
        - cluster
        - world
